--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+<!--     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAIGE</title>
@@ -18,7 +18,7 @@
     }
 </style>
 <body>
-    <button id="apiButton">Click here</button>
+    <button id="apiButton">Click here to check</button>
     <h1 id="apiResponse"></h1>
 </body>
 <script>
