--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     }
 </style>
 <body>
-    <button id="apiButton">Click here to check</button>
+    <button id="apiButton">Click here</button>
     <h1 id="apiResponse"></h1>
 </body>
 <script>
